--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,7 +343,7 @@ textarea.form-control {
 /* ---------------------------------------------- */
 
 #home {
-	background: url(../images/backgroundpic7.jpg);
+	background: url(../images/backgroundpic7.JPG);
 	background-color: #222;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
